# durianflow

./: .gitignore  README.md  SECURITY.md  docker-compose.yml  protocol.md
.github/: dependabot.yml
.github/workflows/: release-gate.yml  security.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-gpu-windows.txt  requirements.txt  run_backend.bat  run_backend.ps1
backend/app/: __init__.py  audio.py  backends.py  config.py  cuda_runtime.py  logging_config.py  main.py  merge.py  metrics.py  model_manifest.py  model_store.py  schemas.py  security.py  session.py  transcriber.py  vad.py  websocket.py  worker.py  worker_protocol.py
backend/requirements/: README.md  cpu.in  dev.in  gpu-windows.in
backend/scripts/: benchmark_models.py  detect_backends.py  install_model.py  manage_model.py  run_worker.py  stream_wav.py  transcribe_file.py
backend/tests/: test_audio.py  test_backends.py  test_benchmark_models.py  test_config.py  test_cuda_runtime.py  test_manage_model.py  test_merge.py  test_mlx_transcriber.py  test_model_store.py  test_protocol.py  test_security.py  test_session.py  test_transcriber.py  test_worker.py  test_worker_protocol.py
desktop/: README.md  package-lock.json  package.json
desktop/src/: advanced_settings.html  advanced_settings.js  auto_backend_recovery.js  (+25 more)
docs/: architecture.md  backend-api.md  compute-backends.md  hardening_plan.md  local-setup.md  macos.md  model-security.md  nvidia-gpu.md  release-checklist.md  repository-flow.md  security-verification.md  tailored_hardening_implementation_plan.md  troubleshooting.md
(+16 files in other folders)
